[gd_scene load_steps=9 format=3 uid="uid://cf2lw4corahn7"]

[ext_resource type="Script" path="res://Entities/Minigames/safe_game.gd" id="1_lythv"]
[ext_resource type="Script" path="res://Entities/Minigames/safe.gd" id="1_sxs4w"]
[ext_resource type="Script" path="res://Entities/Minigames/safe_button.gd" id="2_ixrfm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2sk57"]
bg_color = Color(0.140447, 0.140447, 0.140447, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.438818, 0.439005, 0.0553737, 1)
shadow_color = Color(0, 0, 0, 0.905882)
shadow_size = 16

[sub_resource type="Animation" id="Animation_2lgtt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SuccessFail:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["SUCCESS"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SuccessFail:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SuccessFail:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(586, 315)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SuccessFail:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1pq2k"]
resource_name = "fail"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SuccessFail:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["FAIL"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SuccessFail:theme_override_colors/default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.694118, 0.109804, 0.133333, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SuccessFail:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(586, 315)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SuccessFail:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SuccessFail:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rubs5"]
resource_name = "success"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SuccessFail:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["SUCCESS"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SuccessFail:theme_override_colors/default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.898039, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SuccessFail:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(528, 288)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SuccessFail:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SuccessFail:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf74f"]
_data = {
"RESET": SubResource("Animation_2lgtt"),
"fail": SubResource("Animation_1pq2k"),
"success": SubResource("Animation_rubs5")
}

[node name="Safe" type="CanvasLayer"]
script = ExtResource("1_lythv")

[node name="KeypadContainer" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxs4w")

[node name="Panel" type="Panel" parent="KeypadContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2sk57")

[node name="MarginContainer" type="MarginContainer" parent="KeypadContainer"]
layout_mode = 0
offset_right = 100.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="KeypadContainer/MarginContainer"]
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "1"
script = ExtResource("2_ixrfm")

[node name="Button2" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "2"
script = ExtResource("2_ixrfm")

[node name="Button3" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "3"
script = ExtResource("2_ixrfm")

[node name="Button4" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "4"
script = ExtResource("2_ixrfm")

[node name="Button5" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "5"
script = ExtResource("2_ixrfm")

[node name="Button6" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "6"
script = ExtResource("2_ixrfm")

[node name="Button7" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "7"
script = ExtResource("2_ixrfm")

[node name="Button8" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "8"
script = ExtResource("2_ixrfm")

[node name="Button9" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "9"
script = ExtResource("2_ixrfm")

[node name="Button10" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "#"
script = ExtResource("2_ixrfm")

[node name="Button11" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "0"
script = ExtResource("2_ixrfm")

[node name="Button12" type="Button" parent="KeypadContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "*"
script = ExtResource("2_ixrfm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 396.0
offset_top = 572.0
offset_right = 446.0
offset_bottom = 603.0
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hf74f")
}

[node name="SuccessFail" type="RichTextLabel" parent="."]
visible = false
offset_left = 586.0
offset_top = 315.0
offset_right = 799.0
offset_bottom = 402.0
theme_override_colors/default_color = Color(0.694118, 0.109804, 0.133333, 1)
theme_override_font_sizes/normal_font_size = 49
text = "SUCCESS"

[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button" to="KeypadContainer/MarginContainer/GridContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button2" to="KeypadContainer/MarginContainer/GridContainer/Button2" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button3" to="KeypadContainer/MarginContainer/GridContainer/Button3" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button4" to="KeypadContainer/MarginContainer/GridContainer/Button4" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button5" to="KeypadContainer/MarginContainer/GridContainer/Button5" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button6" to="KeypadContainer/MarginContainer/GridContainer/Button6" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button7" to="KeypadContainer/MarginContainer/GridContainer/Button7" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button8" to="KeypadContainer/MarginContainer/GridContainer/Button8" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button9" to="KeypadContainer/MarginContainer/GridContainer/Button9" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button10" to="KeypadContainer/MarginContainer/GridContainer/Button10" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button11" to="KeypadContainer/MarginContainer/GridContainer/Button11" method="_on_pressed"]
[connection signal="pressed" from="KeypadContainer/MarginContainer/GridContainer/Button12" to="KeypadContainer/MarginContainer/GridContainer/Button12" method="_on_pressed"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="KeypadContainer" method="_on_animation_player_animation_finished"]
